Fix BUG： －當 overflow 時，切換 `info_box` 動畫 BUG －當正在滾動到底部時，有新消息抵達會觸法「新消息」提醒

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,9 +69,6 @@ ul {
     -moz-box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.50);
     box-shadow:      0px 3px 15px 0px rgba(0,0,0,0.50);
     border-radius: 10px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
 }
     .main_box .logo {
         display: none;
@@ -223,8 +220,13 @@ ul {
     }
 /* chat_box */
 #chat_box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     padding: 5px;
-
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
     #chat_box .all {
         width: 100%;
